<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TicTacToe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="player_image">1</string>
    <string name="computer">2</string>
   <string name="player">Player</string>
    <string name="robot">Robot</string>
	 <string name="player_win">Player Wins</string>
	 <string name="robot_win">Robot Wins</string>
	 <string name="no_result">Tie</string>
	 <string name="head">title</string>
	 <string name="yes">Play</string>
	 <string name="no">End</string>
	 <string name="try_again">Do you want to play again ?</string>
	 <string name="click">Click on the Grid to Start</string>
	 <string name="choice">Turn</string>
	 <string name="restart">Restart</string>
	 <string name="title">TicTacToe</string>
</resources>
