<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl0"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/background_dark"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.applico.tictactoe.MainActivity" >
	
	
	<RelativeLayout
	  android:id="@+id/rl1"
	  android:layout_width="fill_parent"
	  android:layout_height="fill_parent"
	   >

		<ImageView
		    android:id="@+id/playerImageView"
		    android:layout_width="75dp"
		    android:layout_height="75dp"
		    android:layout_alignParentBottom="true"
		    android:layout_alignParentLeft="true"
		    android:layout_alignParentStart="true"
		    android:contentDescription="@string/player_image"
		    android:src="@drawable/star" />

		<ImageView
		    android:id="@+id/robotImageView"
		    android:layout_width="75dp"
		    android:layout_height="75dp"
		    android:layout_alignParentBottom="true"
		    android:layout_alignParentRight="true"
		    android:layout_alignParentEnd="true"
		    android:contentDescription="@string/computer"
		    android:src="@drawable/heart" />

		<TextView
		    android:id="@+id/textView1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignTop="@+id/robotImageView"
		    android:layout_marginTop="28dp"
		    android:layout_toRightOf="@+id/playerImageView"
		    android:layout_toEndOf="@+id/playerImageView"
		    android:text="@string/player"
		    android:textColor="@android:color/background_light"
		    android:textAppearance="?android:attr/textAppearanceMedium" />

		<TextView
		    android:id="@+id/textView2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignBaseline="@+id/textView1"
		    android:layout_alignBottom="@+id/textView1"
		    android:layout_toLeftOf="@+id/robotImageView"
		    android:layout_toStartOf="@+id/robotImageView"
		    android:text="@string/robot"
		    android:textColor="@android:color/background_light"
		    android:textAppearance="?android:attr/textAppearanceMedium" />

		<ImageView
		    android:id="@+id/imageViewWin"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		     android:layout_alignParentBottom="true"
		    android:layout_centerHorizontal="true"
		    android:layout_marginBottom="30dp"
		    android:contentDescription="@string/player_win"
		    android:scaleType="centerInside" />

		<TextView
		    android:id="@+id/display_field"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_above="@+id/imageViewWin"
		    android:layout_centerHorizontal="true"
		    android:textColor="@android:color/background_light"
		    android:text=""
		    android:textAppearance="?android:attr/textAppearanceLarge" />

		<ImageView
		    android:id="@+id/titleImageView"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentTop="true"
		    android:src="@drawable/header1"
		    android:contentDescription="@string/title" />

		<TableLayout
		    android:id="@+id/tableLayout1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerInParent="true"
		    android:layout_below="@+id/titleImageView" >

		    <TableRow
		        android:id="@+id/tableRow1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" >

		        <ImageButton
		            android:id="@+id/button01"
		            android:layout_width="75dp"
		            android:layout_height="75dp"
		            android:contentDescription="@string/one" />

		        <ImageButton
		            android:id="@+id/button02"
		            android:layout_width="75dp"
		            android:layout_height="75dp"
		            android:contentDescription="@string/two" />

		        <ImageButton
		            android:id="@+id/button03"
		            android:layout_width="75dp"
		            android:layout_height="75dp"
		            android:contentDescription="@string/three" />
		    </TableRow>

		    <TableRow
		        android:id="@+id/tableRow2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" >

		        <ImageButton
		            android:id="@+id/button04"
		            android:layout_width="75dp"
		            android:layout_height="75dp"
		            android:contentDescription="@string/four" />

		        <ImageButton
		            android:id="@+id/button05"
		            android:layout_width="75dp"
		            android:layout_height="75dp"
		            android:contentDescription="@string/five" />

		        <ImageButton
		            android:id="@+id/button06"
		            android:layout_width="75dp"
		            android:layout_height="75dp"
		            android:contentDescription="@string/six" />
		    </TableRow>

		    <TableRow
		        android:id="@+id/tableRow3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" >

		        <ImageButton
		            android:id="@+id/button07"
		            android:layout_width="75dp"
		            android:layout_height="75dp"
		            android:contentDescription="@string/seven" />

		        <ImageButton
		            android:id="@+id/button08"
		            android:layout_width="75dp"
		            android:layout_height="75dp"
		            android:contentDescription="@string/eight" />

		        <ImageButton
		            android:id="@+id/button09"
		            android:layout_width="75dp"
		            android:layout_height="75dp"
		            android:contentDescription="@string/nine" />
		    </TableRow>
		</TableLayout>

		<TextView
		    android:id="@+id/click_to_start"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/tableLayout1"
		    android:layout_centerHorizontal="true"
		    android:clickable="true"
		    android:text="@string/click"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:textColor="@android:color/background_light" />

	</RelativeLayout>

</RelativeLayout>